; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_encode-basic.c_deflate_drop.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_encode-basic.c_deflate_drop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.deflate = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i8*)* @deflate_drop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @deflate_drop(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.deflate*, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.deflate*
  store %struct.deflate* %7, %struct.deflate** %5, align 8
  %8 = load %struct.deflate*, %struct.deflate** %5, align 8
  %9 = getelementptr inbounds %struct.deflate, %struct.deflate* %8, i32 0, i32 0
  %10 = call i32 @deflateEnd(i32* %9)
  %11 = load i32*, i32** %3, align 8
  %12 = load %struct.deflate*, %struct.deflate** %5, align 8
  %13 = call i32 @fz_free(i32* %11, %struct.deflate* %12)
  ret void
}

declare dso_local i32 @deflateEnd(i32*) #1

declare dso_local i32 @fz_free(i32*, %struct.deflate*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
